hphp/hack/test/typecheck/string_newline_2.php.exp
File "string_newline_2.php", line 11, characters 10-12:
Invalid return type (Typing[4110])
File "string_newline_2.php", line 3, characters 15-17:
Expected int
File "string_newline_2.php", line 11, characters 10-12:
But got string
